tests/paczka1/fuzzy1/87011051.err
Error in line 2: qmxoBX0ny A477 78,2
Error in line 20: qmxoBX0ny A239 44,8
Error in line 24: 64H8XAwrJK A239 8,8
Error in line 25: J9FUthrV5 A28 97,8
Error in line 26: xplqOm S246 168,1
